[package]
name = "mt63"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
csv = { version = "1.3.0", optional = true }
fundsp = "0.19.0"
indicatif = { version = "0.17.8", optional = true }
serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_with = { version = "3.9.0", optional = true }

[features]
default = ["analysis"]
analysis = ["csv", "serde", "indicatif", "serde_with"]


